Update Index Page

--- a/meta/tags.yml
+++ b/meta/tags.yml
@@ -6,7 +6,7 @@ tags:
   - slug: style
     name: style
   - slug: license
-    name: license
+    name: 
   - slug: mdx
     name: mdx
   - slug: markdown
