--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@mapbox/rehype-prism": "^0.5.0",
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
     "@svgr/webpack": "^5.4.0",
     "@types/js-yaml": "^3.12.5",
     "date-fns": "^2.11.1",
