--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -1,6 +1,8 @@
 backend:
   name: git-gateway
   branch: master
+
+local_backend: true
 media_folder: public/images
 public_folder: /images
 publish_mode: editorial_workflow
